feat(1.20.1): port to forge 1.20.1
 - Upgrade to Java 17, Gradle 8.8 and official mappings
 - Replace legacy coremod hooks with Mixins
 - Port core modules, rendering, GUI and event services
 - Migrate keybinds to GLFW with legacy config support
 - Keep unported modules and Schematica excluded
 - Fixed and added lots of changes from legacy coremod logic and mechanics